2015-03-15  Paul Eggert  <eggert@cs.ucla.edu>

	* stdlib/setenv.c (__add_to_environ): Revert previous change.

2015-03-14  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #18128]
	* sysdeps/m68k/m680x0/m68020/bits/atomic.h (atomic_exchange_and_add)
	(atomic_add, atomic_increment_and_test)
	(atomic_decrement_and_test): Fix 64-bit arithmetic.

2015-03-13  Paul Eggert  <eggert@cs.ucla.edu>

	* stdlib/setenv.c (__add_to_environ):
	Dump core quickly if setenv (..., NULL, ...) is called.

2015-03-13  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/arm/tls-macros.h: Include <sysdep.h>.
	(GET_SPECIAL_RELOC, GET_SPECIAL_PCREL): New macros to encapsulate
	all the necessary asm magic in one place.
	(TLS_LE, TLS_IE, TLS_LD, TLS_GD): Rewritten as C expressions
	using those.

2015-03-13  Carlos O'Donell  <carlos@redhat.com>

	[BZ #14906]
	* nscd/cache.c (prune_cache): Use TRACED_FILE. Compare and update
	traced file mtime. Use consistent log message.
	* nscd/connections.c [HAVE_INOTIFY] (install_watches): New function.
	(register_traced_file): Call install_watches. Always set mtime.
	(invalidate_cache): Iterate over all trace files. Call install_watches.
	(inotify_check_files): Don't inline. Handle watching parent
	directories and configuration file movement in and out.
	(handle_inotify_events): New function.
	(main_loop_poll): Call handle_inotify_events.
	(main_loop_epoll): Likewise.
	* nscd/nscd.h: Define TRACED_FILE, TRACED_DIR, and PATH_MAX.
	(struct traced_file): Use array of inotify fds. Add parent directory,
	and basename.
	(struct database_dyn): Remove unused file_mtime.
	(init_traced_file): New inline function.
	(define_traced_file): New macro.
	* nss/nss_db/db-init.c: Use define_traced_file.
	(_nss_db_init): Use init_traced_file.
	* nss/nss_files/files-init.c: Use define_traced_file.
	(_nss_files_init): Use init_traced_file.

2015-03-12  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/soft-fp.h (_FP_STATIC_ASSERT): New macro.
	[_LIBC]: Do not include <stdlib.h>.